--- a/lesson01/package.json
+++ b/lesson01/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^4.2.1",
     "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
