--- a/lesson02/package.json
+++ b/lesson02/package.json
@@ -16,6 +16,8 @@
     "html-webpack-plugin": "^4.3.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
